[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-asr-onnx"
version = "0.1.0"
description = "Local Qwen3-ASR ONNX export, serving and benchmarking workspace."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Local workspace maintainers" }]
dependencies = [
  "numpy",
  "onnxruntime-gpu",
  "librosa",
  "soundfile",
  "transformers==4.57.6",
]

[project.optional-dependencies]
export = [
  "onnx",
  "torch",
]
benchmark = [
  "datasets",
  "editdistance",
  "jiwer",
]
ui = [
  "accelerate==1.12.0",
  "gradio",
  "nagisa==0.2.11",
  "pytz",
  "qwen-omni-utils",
  "scipy",
  "sox",
  "soynlp==0.0.493",
  "torch",
]
torch-baseline = [
  "accelerate==1.12.0",
  "nagisa==0.2.11",
  "pytz",
  "qwen-omni-utils",
  "sox",
  "soynlp==0.0.493",
  "torch",
]
vllm = [
  "accelerate==1.12.0",
  "nagisa==0.2.11",
  "pytz",
  "qwen-omni-utils",
  "sox",
  "soynlp==0.0.493",
  "torch",
  "vllm==0.14.0",
]
dev-full = [
  "accelerate==1.12.0",
  "datasets",
  "editdistance",
  "flask",
  "gradio",
  "jiwer",
  "nagisa==0.2.11",
  "onnx",
  "pytz",
  "qwen-omni-utils",
  "scipy",
  "sox",
  "soynlp==0.0.493",
  "torch",
  "vllm==0.14.0",
]

[tool.setuptools]
packages = { find = { where = ["."] , include = ["qwen_asr*"] } }
include-package-data = true

[tool.setuptools.package-data]
qwen_asr = ["py.typed", "**/*.dict"]
